Created HTML and CSS of home, Login, Products, Product Details, Cart, Checkout pages

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -92,6 +92,7 @@
         <div class="header-menu"><!---->
           <ul>
             <li><a routerlink="/" href="/">Home </a></li>
+            <li><a routerlink="/login" href="/login">Login</a></li>
             <li><a routerlink="/products" href="/products">Products</a></li>
             <li><a routerlink="/product-details" href="/product-details">Product Details</a></li>
             <li><a routerlink="/cart" href="/cart">Cart</a></li>
