Home Page changes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<!-- <app-header></app-header> -->
 <div class="banner-area">
   <div class="container">
     <div class="banner-main">
@@ -452,7 +453,8 @@
         </div>
       </div>
     </div>
-    <div class="btn view-btn"><a routerlink="../category" href="/category"><i class="fa fa-eye"></i> View All Category</a>
+    <div class="btn view-btn"><a routerlink="../category" href="/category"><i class="fa fa-eye"></i> View All
+        Category</a>
     </div>
   </div>
 </div>
@@ -5158,3 +5160,19 @@
     <div class="view-btn"><a routerlink="/blogs" href="/blogs"><i class="fa fa-eye"></i>Read All Articles</a></div>
   </div>
 </div>
+
+<!-- <div class="cdk-overlay-container">
+  <div class="cdk-overlay-backdrop cdk-overlay-dark-backdrop cdk-overlay-backdrop-showing"></div>
+  <div class="cdk-global-overlay-wrapper" dir="ltr" style="justify-content: center; align-items: center;">
+    <div id="cdk-overlay-0" class="cdk-overlay-pane theme-dialog offer-popup-dialog"
+      style="max-width: 500px; max-height: 520px; width: 100%; height: 100%; position: static;">
+      <div tabindex="0" class="cdk-visually-hidden cdk-focus-trap-anchor" aria-hidden="true"></div>
+      <mat-dialog-container tabindex="-1" aria-modal="true"
+        class="mat-dialog-container ng-tns-c69-0 ng-trigger ng-trigger-dialogContainer ng-star-inserted"
+        id="mat-dialog-0" role="dialog" style="transform: none;">
+        <app-offer></app-offer>
+      </mat-dialog-container>
+      <div tabindex="0" class="cdk-visually-hidden cdk-focus-trap-anchor" aria-hidden="true"></div>
+    </div>
+  </div>
+</div> -->
